--- a/index.html
+++ b/index.html
@@ -1,67 +1,403 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>موقعي لتعلم الألمانية</title>
-</head>
-<body>
-<h1>تعلم الألمانية بسهولة</h1>
-<p>هنا ستجد كلمات ودروس ألمانية مع الترجمة العربية.</p>
-<h2>كلمة اليوم</h2>
-<p><strong>Haus</strong> = بيت</p>
-</body>
-</html>
-<h1>قائمة كلمات ألمانية مع الترجمة</h1>
-<ol>
-<li>Haus = بيت</li>
-<li>Auto = سيارة</li>
-<li>Baum = شجرة</li>
-<li>Buch = كتاب</li>
-<li>Stuhl = كرسي</li>
-<li>Tisch = طاولة</li>
-<li>Tür = باب</li>
-<li>Fenster = نافذة</li>
-<li>Schule = مدرسة</li>
-<li>Lehrer = معلم</li>
-<li>Schüler = تلميذ</li>
-<li>Universität = جامعة</li>
-<li>Hund = كلب</li>
-<li>Katze = قطة</li>
-<li>Vogel = طائر</li>
-<li>Wasser = ماء</li>
-<li>Brot = خبز</li>
-<li>Milch = حليب</li>
-<li>Apfel = تفاحة</li>
-<li>Banane = موز</li>
-<li>Hand = يد</li>
-<li>Fuß = قدم</li>
-<li>Kopf = رأس</li>
-<li>Herz = قلب</li>
-<li>Zahn = سن</li>
-<li>Stadt = مدينة</li>
-<li>Dorf = قرية</li>
-<li>Land = بلد</li>
-<li>Weg = طريق</li>
-<li>Brücke = جسر</li>
-<li>Bahn = قطار</li>
-<li>Flugzeug = طائرة</li>
-<li>Schiff = سفينة</li>
-<li>       Uhr = ساعة</li>
-<li>      Tag = يوم</li>
-<li>      Nacht = ليل</li>
-<li>       Woche = أسبوع</li>
-<li>        Monat = شهر</li>
-<li>        Jahr = سنة</li>
-<li>        Sommer = صيف</li>
-<li>        Winter = شتاء</li>
-<li>         Herbst = خريف</li>
-<li>        Frühling = ربيع</li>
-<li>      Himmel = سماء</li>
-<li>      Sonne = شمس</li>
-<li>      Mond = قمر</li>
-<li>       Stern = نجم</li>
-<li>      Meer = بحر</li>
-<li>         Berg = جبل</li>
-
-</ol>
-<1i> ja = ja</1i> 
+<h2>100 كلمة ألمانية مع أمثلة مترجمة</h2>
+<table border="1" cellpadding="10">
+<tr>
+<th>الكلمة بالألمانية</th>
+<th>المعنى بالعربية</th>
+<th>مثال الجملة بالألمانية</th>
+<th>ترجمة المثال بالعربية</th>
+</tr>
+<tr>
+<td>Hallo</td>
+<td>مرحبًا</td>
+<td>Hallo, wie geht's dir?</td>
+<td>مرحبًا، كيف حالك؟</td>
+</tr>
+<tr>
+<td>Danke</td>
+<td>شكرًا</td>
+<td>Danke für deine Hilfe.</td>
+<td>شكرًا لمساعدتك.</td>
+</tr>
+<tr>
+<td>Ja</td>
+<td>نعم</td>
+<td>Ja, ich verstehe.</td>
+<td>نعم، أفهم.</td>
+</tr>
+<tr>
+<td>Nein</td>
+<td>لا</td>
+<td>Nein, danke.</td>
+<td>لا، شكرًا.</td>
+</tr>
+<tr>
+<td>Bitte</td>
+<td>من فضلك / على الرحب والسعة</td>
+<td>Kannst du mir bitte helfen?</td>
+<td>هل يمكنك مساعدتي من فضلك؟</td>
+</tr>
+<tr>
+<td>Entschuldigung</td>
+<td>عذرًا</td>
+<td>Entschuldigung, wo ist der Bahnhof?</td>
+<td>عذرًا، أين محطة القطار؟</td>
+</tr>
+<tr>
+<td>Guten Morgen</td>
+<td>صباح الخير</td>
+<td>Guten Morgen, wie geht's?</td>
+<td>صباح الخير، كيف حالك؟</td>
+</tr>
+<tr>
+<td>Guten Abend</td>
+<td>مساء الخير</td>
+<td>Guten Abend, hast du gut geschlafen?</td>
+<td>مساء الخير، هل نمت جيدًا؟</td>
+</tr>
+<tr>
+<td>Gute Nacht</td>
+<td>تصبح على خير</td>
+<td>Gute Nacht, träum schön.</td>
+<td>تصبح على خير، احلم بأحلام جميلة.</td>
+</tr>
+<tr>
+<td>Wie geht's?</td>
+<td>كيف حالك؟</td>
+<td>Wie geht's dir heute?</td>
+<td>كيف حالك اليوم؟</td>
+</tr>
+<tr>
+<td>Mir geht's gut</td>
+<td>أنا بخير</td>
+<td>Mir geht's gut, danke.</td>
+<td>أنا بخير، شكرًا.</td>
+</tr>
+<tr>
+<td>Was machst du?</td>
+<td>ماذا تفعل؟</td>
+<td>Was machst du am Wochenende?</td>
+<td>ماذا تفعل في عطلة نهاية الأسبوع؟</td>
+</tr>
+<tr>
+<td>Arbeiten</td>
+<td>يعمل</td>
+<td>Ich arbeite von 9 bis 5.</td>
+<td>أعمل من التاسعة حتى الخامسة.</td>
+</tr>
+<tr>
+<td>Schlafen</td>
+<td>ينام</td>
+<td>Ich schlafe acht Stunden pro Nacht.</td>
+<td>أنام ثماني ساعات كل ليلة.</td>
+</tr>
+<tr>
+<td>Essen</td>
+<td>يأكل</td>
+<td>Wir essen um 12 Uhr Mittag.</td>
+<td>نتناول الغداء الساعة 12.</td>
+</tr>
+<tr>
+<td>Trinken</td>
+<td>يشرب</td>
+<td>Er trinkt jeden Morgen Kaffee.</td>
+<td>يشرب القهوة كل صباح.</td>
+</tr>
+<tr>
+<td>Lesen</td>
+<td>يقرأ</td>
+<td>Sie liest gerne Bücher.</td>
+<td>تحب قراءة الكتب.</td>
+</tr>
+<tr>
+<td>Schreiben</td>
+<td>يكتب</td>
+<td>Ich schreibe einen Brief.</td>
+<td>أكتب رسالة.</td>
+</tr>
+<tr>
+<td>Fahren</td>
+<td>يسافر / يقود</td>
+<td>Wir fahren mit dem Auto zur Arbeit.</td>
+<td>نذهب بالسيارة إلى العمل.</td>
+</tr>
+<tr>
+<td>Gehen</td>
+<td>يذهب</td>
+<td>Ich gehe zu Fuß zur Schule.</td>
+<td>أذهب سيرًا على الأقدام إلى المدرسة.</td>
+</tr>
+<tr>
+<td>Sehen</td>
+<td>يرى</td>
+<td>Wir sehen einen Film im Kino.</td>
+<td>نشاهد فيلمًا في السينما.</td>
+</tr>
+<tr>
+<td>Hören</td>
+<td>يسمع</td>
+<td>Ich höre Musik am Abend.</td>
+<td>أستمع إلى الموسيقى في المساء.</td>
+</tr>
+<tr>
+<td>Spielen</td>
+<td>يلعب</td>
+<td>Die Kinder spielen im Park.</td>
+<td>يلعب الأطفال في الحديقة.</td>
+</tr>
+<tr>
+<td>Arzt</td>
+<td>طبيب</td>
+<td>Der Arzt hilft den Patienten.</td>
+<td>يساعد الطبيب المرضى.</td>
+</tr>
+<tr>
+<td>Lehrer</td>
+<td>معلم</td>
+<td>Der Lehrer erklärt die Aufgabe.</td>
+<td>يشرح المعلم المهمة.</td>
+</tr>
+<tr>
+<td>Schüler</td>
+<td>طالب</td>
+<td>Der Schüler macht seine Hausaufgaben.</td>
+<td>يقوم الطالب بواجبه المنزلي.</td>
+</tr>
+<tr>
+<td>Freund</td>
+<td>صديق</td>
+<td>Mein Freund hilft mir immer.</td>
+<td>صديقي يساعدني دائمًا.</td>
+</tr>
+<tr>
+<td>Freundin</td>
+<td>صديقة</td>
+<td>Meine Freundin ist sehr nett.</td>
+<td>صديقتي طيبة جدًا.</td>
+</tr>
+<tr>
+<td>Familie</td>
+<td>عائلة</td>
+<td>Die Familie isst zusammen zu Abend.</td>
+<td>تتناول العائلة العشاء معًا.</td>
+</tr>
+<tr>
+<td>Haus</td>
+<td>منزل</td>
+<td>Wir wohnen in einem großen Haus.</td>
+<td>نعيش في منزل كبير.</td>
+</tr>
+<tr>
+<td>Auto</td>
+<td>سيارة</td>
+<td>Das Auto ist schnell.</td>
+<td>السيارة سريعة.</td>
+</tr>
+<tr>
+<td>Bus</td>
+<td>حافلة</td>
+<td>Der Bus kommt in fünf Minuten.</td>
+<td>تصل الحافلة بعد خمس دقائق.</td>
+</tr>
+<tr>
+<td>Flughafen</td>
+<td>مطار</td>
+<td>Der Flughafen ist sehr groß.</td>
+<td>المطار كبير جدًا.</td>
+</tr>
+<tr>
+<td>Bahnhof</td>
+<td>محطة قطار</td>
+<td>Der Bahnhof ist in der Nähe.</td>
+<td>محطة القطار قريبة.</td>
+</tr>
+<tr>
+<td>Stadt</td>
+<td>مدينة</td>
+<td>Die Stadt ist sehr schön.</td>
+<td>المدينة جميلة جدًا.</td>
+</tr>
+<tr>
+<td>Dorf</td>
+<td>قرية</td>
+<td>Das Dorf ist ruhig.</td>
+<td>القرية هادئة.</td>
+</tr>
+<tr>
+<td>Land</td>
+<td>بلد</td>
+<td>Deutschland ist ein Land in Europa.</td>
+<td>ألمانيا هي دولة في أوروبا.</td>
+</tr>
+<tr>
+<td>Woche</td>
+<td>أسبوع</td>
+<td>Eine Woche hat sieben Tage.</td>
+<td>الأسبوع يحتوي على سبعة أيام.</td>
+</tr>
+<tr>
+<td>Monat</td>
+<td>شهر</td>
+<td>Der Monat hat 30 Tage.</td>
+<tr>
+<td>Jahr</td>
+<td>سنة</td>
+<td>Das Jahr hat zwölf Monate.</td>
+<td>السنة تحتوي على اثني عشر شهرًا.</td>
+</tr>
+<tr>
+<td>Tag</td>
+<td>يوم</td>
+<td>Heute ist ein schöner Tag.</td>
+<td>اليوم يوم جميل.</td>
+</tr>
+<tr>
+<td>Nacht</td>
+<td>ليل</td>
+<td>In der Nacht schlafe ich.</td>
+<td>أنام في الليل.</td>
+</tr>
+<tr>
+<td>Stunde</td>
+<td>ساعة</td>
+<td>Eine Stunde dauert 60 Minuten.</td>
+<td>الساعة تحتوي على 60 دقيقة.</td>
+</tr>
+<tr>
+<td>Minute</td>
+<td>دقيقة</td>
+<td>Die Minute vergeht schnell.</td>
+<td>الدقيقة تمر بسرعة.</td>
+</tr>
+<tr>
+<td>Wasser</td>
+<td>ماء</td>
+<td>Ich trinke jeden Tag Wasser.</td>
+<td>أشرب الماء كل يوم.</td>
+</tr>
+<tr>
+<td>Brot</td>
+<td>خبز</td>
+<td>Ich esse Brot zum Frühstück.</td>
+<td>أكل الخبز على الفطور.</td>
+</tr>
+<tr>
+<td>Milch</td>
+<td>حليب</td>
+<td>Ich trinke Milch jeden Morgen.</td>
+<td>أشرب الحليب كل صباح.</td>
+</tr>
+<tr>
+<td>Obst</td>
+<td>فاكهة</td>
+<td>Obst ist gesund.</td>
+<td>الفاكهة صحية.</td>
+</tr>
+<tr>
+<td>Gemüse</td>
+<td>خضروات</td>
+<td>Gemüse essen ist wichtig.</td>
+<td>أكل الخضروات مهم.</td>
+</tr>
+<tr>
+<td>Hund</td>
+<td>كلب</td>
+<td>Der Hund spielt im Garten.</td>
+<td>الكلب يلعب في الحديقة.</td>
+</tr>
+<tr>
+<td>Katze</td>
+<td>قطة</td>
+<td>Die Katze schläft auf dem Sofa.</td>
+<td>القطة تنام على الأريكة.</td>
+</tr>
+<tr>
+<td>Vogel</td>
+<td>طائر</td>
+<td>Der Vogel singt im Baum.</td>
+<td>الطائر يغني على الشجرة.</td>
+</tr>
+<tr>
+<td>Blume</td>
+<td>زهرة</td>
+<td>Die Blume ist schön.</td>
+<td>الزهرة جميلة.</td>
+</tr>
+<tr>
+<td>Buch</td>
+<td>كتاب</td>
+<td>Ich lese ein Buch.</td>
+<td>أقرأ كتابًا.</td>
+</tr>
+<tr>
+<td>Stuhl</td>
+<td>كرسي</td>
+<td>Der Stuhl ist bequem.</td>
+<td>الكرسي مريح.</td>
+</tr>
+<tr>
+<td>Tisch</td>
+<td>طاولة</td>
+<td>Der Tisch ist groß.</td>
+<td>الطاولة كبيرة.</td>
+</tr>
+<tr>
+<td>Tür</td>
+<td>باب</td>
+<td>Die Tür ist offen.</td>
+<td>الباب مفتوح.</td>
+</tr>
+<tr>
+<td>Fenster</td>
+<td>نافذة</td>
+<td>Das Fenster ist sauber.</td>
+<td>النافذة نظيفة.</td>
+</tr>
+<tr>
+<td>Schule</td>
+<td>مدرسة</td>
+<td>Die Kinder gehen zur Schule.</td>
+<td>الأطفال يذهبون إلى المدرسة.</td>
+</tr>
+<tr>
+<td>Universität</td>
+<td>جامعة</td>
+<td>Ich studiere an der Universität.</td>
+<td>أدرس في الجامعة.</td>
+</tr>
+<tr>
+<td>Büro</td>
+<td>مكتب</td>
+<td>Im Büro arbeiten viele Leute.</td>
+<td>في المكتب يعمل الكثير من الناس.</td>
+</tr>
+<tr>
+<td>Arbeit</td>
+<td>عمل</td>
+<td>Ich habe viel Arbeit.</td>
+<td>لدي الكثير من العمل.</td>
+</tr>
+<tr>
+<td>Freizeit</td>
+<td>وقت فراغ</td>
+<td>In der Freizeit lese ich Bücher.</td>
+<td>في وقت الفراغ أقرأ الكتب.</td>
+</tr>
+<tr>
+<td>Sport</td>
+<td>رياضة</td>
+<td>Ich spiele gern Sport.</td>
+<td>أحب ممارسة الرياضة.</td>
+</tr>
+<tr>
+<td>Musik</td>
+<td>موسيقى</td>
+<td>Ich höre gern Musik.</td>
+<td>أحب الاستماع إلى الموسيقى.</td>
+</tr>
+<tr>
+<td>Film</td>
+<td>فيلم</td>
+<td>Wir sehen einen Film im Kino.</td>
+<td>نشاهد فيلمًا في السينما.</td>
+</tr>
+</table>
