--- a/index.html
+++ b/index.html
@@ -400,4 +400,78 @@
 <td>Wir sehen einen Film im Kino.</td>
 <td>نشاهد فيلمًا في السينما.</td>
 </tr>
+
 </table>
+
+
+<!DOCTYPE html>
+<html lang="de">
+<head>
+<meta charset="UTF-8">
+<title>E-Mail Vorlage – Deutsch & Arabisch</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- تنسيقات بسيطة ومتوافقة مع أغلب برامج البريد -->
+</head>
+<body style="margin:0;padding:0;background:#f7f7f7;">
+<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#f7f7f7;">
+<tr>
+<td align="center" style="padding:20px;">
+<table role="presentation" width="600" cellpadding="0" cellspacing="0" style="max-width:600px;width:100%;background:#ffffff;border:1px solid #e5e5e5;">
+<tr>
+<td style="padding:24px;font-family:Arial,Helvetica,sans-serif;line-height:1.6;color:#222;">
+<!-- العنوان -->
+<h2 style="margin:0 0 12px 0;font-size:20px;color:#0b5394;">Anfrage / استفسار</h2>
+<!-- التحية -->
+<p style="margin:0 0 8px 0;font-size:15px;">
+<strong>Deutsch:</strong> Sehr geehrte Damen und Herren,
+</p>
+<p dir="rtl" style="margin:0 0 14px 0;font-size:15px;">
+<strong>العربية:</strong> السيدات والسادة المحترمون،
+</p>
+<!-- المقدمة -->
+<p style="margin:0 0 8px 0;font-size:15px;">
+<strong>Deutsch:</strong> mein Name ist ⟨Ihr Name⟩. Ich interessiere mich für ⟨Thema/Produkt/Service⟩ und hätte dazu ein paar Fragen.
+</p>
+<p dir="rtl" style="margin:0 0 14px 0;font-size:15px;">
+<strong>العربية:</strong> اسمي ⟨اسمك⟩. أنا مهتم بـ ⟨الموضوع/المنتج/الخدمة⟩ ولدي بعض الأسئلة حوله.
+</p>
+<!-- الأسئلة/الطلب -->
+<p style="margin:0 0 8px 0;font-size:15px;">
+<strong>Deutsch:</strong> Könnten Sie mir bitte Informationen zu ⟨konkrete Frage 1⟩ und ⟨konkrete Frage 2⟩ zukommen lassen? Außerdem würde ich gern wissen, ⟨konkrete Frage 3⟩.
+</p>
+<p dir="rtl" style="margin:0 0 14px 0;font-size:15px;">
+<strong>العربية:</strong> هل يمكنكم تزويدي بمعلومات حول ⟨السؤال 1⟩ و⟨السؤال 2⟩؟ وأود أيضًا معرفة ⟨السؤال 3⟩.
+</p>
+<!-- ختام مهذب -->
+<p style="margin:0 0 8px 0;font-size:15px;">
+<strong>Deutsch:</strong> Vielen Dank im Voraus für Ihre Unterstützung. Über eine kurze Rückmeldung würde ich mich freuen.
+</p>
+<p dir="rtl" style="margin:0 0 14px 0;font-size:15px;">
+<strong>العربية:</strong> شكرًا مقدمًا على دعمكم. سأكون ممتنًا لتلقي رد منكم في أقرب وقت.
+</p>
+<!-- التحية الختامية والتوقيع -->
+<p style="margin:0 0 6px 0;font-size:15px;">
+<strong>Deutsch:</strong> Mit freundlichen Grüßen
+</p>
+<p dir="rtl" style="margin:0 0 12px 0;font-size:15px;">
+<strong>العربية:</strong> مع خالص التحية،
+</p>
+<p style="margin:0;font-size:15px;">
+                 ⟨Ihr Name / اسمك⟩<br>
+                 ⟨Ihre Telefonnummer / رقم هاتفك⟩<br>
+                 ⟨Ihre E-Mail / بريدك الإلكتروني⟩
+</p>
+<hr style="margin:20px 0;border:none;border-top:1px solid #eee;">
+<!-- ملاحظة قصيرة اختيارية -->
+<p style="margin:0;color:#555;font-size:12px;">
+                 Hinweis: Diese E-Mail enthält den deutschen Text mit arabischer Übersetzung nach jedem Abschnitt. /
+                 تحتوي هذه الرسالة على نص ألماني مع ترجمة عربية بعد كل فقرة.
+</p>
+</td>
+</tr>
+</table>
+</td>
+</tr>
+</table>
+</body>
+</html>
