--- a/index.html
+++ b/index.html
@@ -1,3 +1,25 @@
+<head>
+<meta charset="UTF-8">
+<title>موقعي</title>
+<!-- هنا ألصق التنسيقات -->
+<style>
+   body {
+     font-family: Arial, Helvetica, sans-serif;
+     font-size: 18px;
+     line-height: 1.6;
+     color: #222;
+     padding: 10px;
+   }
+   @media (max-width: 600px) {
+     body {
+       font-size: 20px;
+     }
+   }
+</style>
+</head>
+
+
+
 <h2>100 كلمة ألمانية مع أمثلة مترجمة</h2>
 <table border="1" cellpadding="10">
 <tr>
@@ -475,3 +497,4 @@
 </table>
 </body>
 </html>
+
