Updضافة ملف words.html يحتوي على 100 كلمة ألمانيةate words.html

--- a/words.html
+++ b/words.html
@@ -2,45 +2,164 @@
 <html lang="ar">
 <head>
 <meta charset="UTF-8">
-<title>كلمات اللغة الألمانية</title>
+<title>📖 كلمات ألمانية</title>
 <style>
-   body { font-family: Arial, sans-serif; background-color: #f0f8ff; color: #333; margin: 20px; line-height: 1.6; }
-   h1, h2 { color: #004080; }
-   nav a { text-decoration: none; color: #004080; font-weight: bold; margin-right: 10px; }
-   nav a:hover { color: #ff6600; }
-   table { width: 100%; border-collapse: collapse; margin-top: 20px; }
-   th, td { border: 1px solid #004080; padding: 10px; text-align: left; }
-   th { background-color: #cce0ff; }
-   tr:nth-child(even) { background-color: #e6f0ff; }
+   body {
+     font-family: Arial, Helvetica, sans-serif;
+     font-size: 18px;
+     line-height: 1.6;
+     color: #222;
+     padding: 20px;
+     background: #f9f9f9;
+   }
+   h1 {
+     text-align: center;
+     color: #0077cc;
+   }
+   ul {
+     columns: 2; /* عرض الكلمات في عمودين */
+     -webkit-columns: 2;
+     -moz-columns: 2;
+     list-style-type: none;
+     padding: 0;
+   }
+   li {
+     margin: 5px 0;
+     padding: 5px;
+     background: #fff;
+     border: 1px solid #ddd;
+     border-radius: 5px;
+   }
+   a {
+     display: inline-block;
+     margin-top: 20px;
+     text-decoration: none;
+     background: #0077cc;
+     color: #fff;
+     padding: 10px 15px;
+     border-radius: 5px;
+   }
+   a:hover {
+     background: #005fa3;
+   }
 </style>
 </head>
 <body>
-<nav>
-<a href="index.html">الرئيسية</a>
-<a href="words.html">الكلمات</a>
-<a href="phrases.html">عبارات</a>
-</nav>
-<h1>كلمات اللغة الألمانية مع أمثلة</h1>
-<table>
-<tr>
-<th>الكلمة بالألمانية</th>
-<th>المعنى بالعربية</th>
-<th>مثال الجملة بالألمانية</th>
-<th>ترجمة المثال بالعربية</th>
-</tr>
-<tr>
-<td>Hallo</td>
-<td>مرحبا</td>
-<td>Hallo, wie geht's dir?</td>
-<td>مرحبا، كيف حالك؟</td>
-</tr>
-<tr>
-<td>Danke</td>
-<td>شكرًا</td>
-<td>Danke für deine Hilfe.</td>
-<td>شكرًا لمساعدتك.</td>
-</tr>
-<!-- يمكن إضافة باقي الكلمات هنا لاحقًا -->
-</table>
+<h1>📖 100 كلمة ألمانية مع الترجمة</h1>
+<ul>
+<li>Haus = بيت</li>
+<li>Auto = سيارة</li>
+<li>Buch = كتاب</li>
+<li>Freund = صديق</li>
+<li>Schule = مدرسة</li>
+<li>Wasser = ماء</li>
+<li>Brot = خبز</li>
+<li>Milch = حليب</li>
+<li>Apfel = تفاحة</li>
+<li>Banane = موزة</li>
+<li>Hund = كلب</li>
+<li>Katze = قطة</li>
+<li>Tisch = طاولة</li>
+<li>Stuhl = كرسي</li>
+<li>Fenster = نافذة</li>
+<li>Tür = باب</li>
+<li>Stadt = مدينة</li>
+<li>Dorf = قرية</li>
+<li>Zug = قطار</li>
+<li>Flugzeug = طائرة</li>
+<li>Bus = باص</li>
+<li>Arzt = طبيب</li>
+<li>Lehrer = معلم</li>
+<li>Schüler = طالب</li>
+<li>Universität = جامعة</li>
+<li>Arbeit = عمل</li>
+<li>Büro = مكتب</li>
+<li>Geld = مال</li>
+<li>Bank = بنك</li>
+<li>Laden = متجر</li>
+<li>Küche = مطبخ</li>
+<li>Bett = سرير</li>
+<li>Zimmer = غرفة</li>
+<li>Wohnung = شقة</li>
+<li>Hausaufgabe = واجب منزلي</li>
+<li>Kleid = فستان</li>
+<li>Hose = بنطال</li>
+<li>Schuhe = أحذية</li>
+<li>Jacke = معطف</li>
+<li>Hemd = قميص</li>
+<li>Kind = طفل</li>
+<li>Mann = رجل</li>
+<li>Frau = امرأة</li>
+<li>Eltern = والدان</li>
+<li>Bruder = أخ</li>
+<li>Schwester = أخت</li>
+<li>Onkel = عم / خال</li>
+<li>Tante = عمة / خالة</li>
+<li>Oma = جدة</li>
+<li>Opa = جد</li>
+<li>Sommer = صيف</li>
+<li>Winter = شتاء</li>
+<li>Herbst = خريف</li>
+<li>Frühling = ربيع</li>
+<li>Montag = الإثنين</li>
+<li>Dienstag = الثلاثاء</li>
+<li>Mittwoch = الأربعاء</li>
+<li>Donnerstag = الخميس</li>
+<li>Freitag = الجمعة</li>
+<li>Samstag = السبت</li>
+<li>Sonntag = الأحد</li>
+<li>Januar = يناير</li>
+<li>Februar = فبراير</li>
+<li>März = مارس</li>
+<li>April = أبريل</li>
+<li>Mai = مايو</li>
+<li>Juni = يونيو</li>
+<li>Juli = يوليو</li>
+<li>August = أغسطس</li>
+<li>September = سبتمبر</li>
+<li>Oktober = أكتوبر</li>
+<li>November = نوفمبر</li>
+<li>Dezember = ديسمبر</li>
+<li>Heute = اليوم</li>
+<li>Morgen = غداً</li>
+<li>Gestern = أمس</li>
+<li>Uhr = ساعة</li>
+<li>Minute = دقيقة</li>
+<li>Sekunde = ثانية</li>
+<li>Frühstück = فطور</li>
+<li>Mittagessen = غداء</li>
+<li>Abendessen = عشاء</li>
+<li>Kaffee = قهوة</li>
+<li>Tee = شاي</li>
+<li>Zucker = سكر</li>
+<li>Salz = ملح</li>
+<li>Reis = رز</li>
+<li>Fleisch = لحم</li>
+<li>Fisch = سمك</li>
+<li>Ei = بيضة</li>
+<li>Käse = جبنة</li>
+<li>Butter = زبدة</li>
+<li>Tomate = طماطم</li>
+<li>Kartoffel = بطاطس</li>
+<li>Zwiebel = بصل</li>
+<li>Karotte = جزر</li>
+<li>Salat = سلطة</li>
+<li>Obst = فواكه</li>
+<li>Gemüse = خضار</li>
+<li>Sport = رياضة</li>
+<li>Fußball = كرة القدم</li>
+<li>Schwimmen = سباحة</li>
+<li>Laufen = جري</li>
+<li>Musik = موسيقى</li>
+<li>Film = فيلم</li>
+<li>Bild = صورة</li>
+<li>Berg = جبل</li>
+<li>Meer = بحر</li>
+<li>Fluss = نهر</li>
+<li>Wald = غابة</li>
+</ul>
+<p style="text-align:center">
+<a href="index.html">🔙 رجوع للصفحة الرئيسية</a>
+</p>
 </body>
 </html>
