--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<style>
+ 
+</style>
+</style>
+</he<style>
  body {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 18px; /* حجم الخط الافتراضي للكمبيوتر */
@@ -31,9 +34,7 @@
      font-size: 20px;
    }
  }
-</style>
-</style>
-</head>
+</style>ad>
 <body>
 <h1>👋 أهلاً بك في موقعي التعليمي</h1>
 <p>اختر القسم الذي تريد الدخول إليه:</p>
@@ -45,6 +46,7 @@
 </ul>
 </body>
 </html>
+
 
 
 
