--- a/index.html
+++ b/index.html
@@ -1,41 +1,40 @@
- 
-</style>
-</style>
-</he<style>
- body {
-   font-family: Arial, Helvetica, sans-serif;
-   font-size: 18px; /* حجم الخط الافتراضي للكمبيوتر */
-   line-height: 1.6;
-   color: #222;
-   padding: 20px;
-   text-align: center;
-   background: #f9f9f9;
- }
- a {
-   text-decoration: none;
-   display: inline-block;
-   background: #0077cc;
-   color: white;
-   padding: 12px 20px;
-   border-radius: 6px;
-   font-weight: bold;
-   transition: 0.3s;
- }
- a:hover {
-   background: #005fa3;
- }
- /* تكبير الخط على الشاشات الصغيرة (الجوال) */
- @media (max-width: 600px) {
+<head>
+<meta charset="UTF-8">
+<title>موقعي التعليمي</title>
+<style>
    body {
-     font-size: 20px; /* أكبر للجوال */
+     font-family: Arial, Helvetica, sans-serif;
+     font-size: 18px;
+     line-height: 1.6;
+     text-align: center;
+     padding: 20px;
+     background: #f9f9f9;
+     color: #222;
    }
    a {
-     padding: 15px 25px; /* تكبير الأزرار للجوال */
-     font-size: 20px;
+     text-decoration: none;
+     display: inline-block;
+     background: #0077cc;
+     color: white;
+     padding: 12px 20px;
+     border-radius: 6px;
+     font-weight: bold;
    }
- }
-</style>ad>
-<body>
+   a:hover {
+     background: #005fa3;
+   }
+   @media (max-width: 600px) {
+     body {
+       font-size: 20px;
+     }
+     a {
+       font-size: 20px;
+       padding: 15px 25px;
+     }
+   }
+</style>
+</head>
+
 <h1>👋 أهلاً بك في موقعي التعليمي</h1>
 <p>اختر القسم الذي تريد الدخول إليه:</p>
 <ul>
@@ -46,6 +45,7 @@
 </ul>
 </body>
 </html>
+
 
 
 
