--- a/index.html
+++ b/index.html
@@ -2,36 +2,37 @@
 <meta charset="UTF-8">
 <title>موقعي التعليمي</title>
 <style>
-   body {
-     font-family: Arial, Helvetica, sans-serif;
-     font-size: 18px;
-     line-height: 1.6;
-     text-align: center;
-     padding: 20px;
-     background: #f9f9f9;
-     color: #222;
-   }
-   a {
-     text-decoration: none;
-     display: inline-block;
-     background: #0077cc;
-     color: white;
-     padding: 12px 20px;
-     border-radius: 6px;
-     font-weight: bold;
-   }
-   a:hover {
-     background: #005fa3;
-   }
-   @media (max-width: 600px) {
-     body {
-       font-size: 20px;
-     }
-     a {
-       font-size: 20px;
-       padding: 15px 25px;
-     }
-   }
+body {
+ font-family: Arial, Helvetica, sans-serif;
+ font-size: 18px; /* حجم الخط للكمبيوتر */
+ line-height: 1.6;
+ color: #222;
+ padding: 20px;
+ text-align: center;
+ background: #f9f9f9;
+}
+a {
+ text-decoration: none;
+ display: inline-block;
+ background: #0077cc;
+ color: white;
+ padding: 12px 20px;
+ border-radius: 6px;
+ font-weight: bold;
+}
+a:hover {
+ background: #005fa3;
+}
+/* تكبير الخط على الجوال */
+@media (max-width: 600px) {
+ body {
+   font-size: 20px !important;
+ }
+ a {
+   font-size: 20px !important;
+   padding: 15px 25px !important;
+ }
+}
 </style>
 </head>
 
@@ -45,6 +46,7 @@
 </ul>
 </body>
 </html>
+
 
 
 
