Update emails.html ضافة صفحة إيميلات مستوى A1 كاملة مع ترجمة وسبب كتابة الإيميل، وتصميم احترافي متجاوب للجوال

--- a/emails.html
+++ b/emails.html
@@ -2,7 +2,7 @@
 <html lang="ar">
 <head>
 <meta charset="UTF-8">
-<title>📧 إيميلات كل المستويات</title>
+<title>📧 إيميلات مستوى A1</title>
 <style>
    body {
      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -33,34 +33,33 @@
      gap: 30px;
      align-items: center;
    }
-   .level-section {
+   .email-card {
      background: white;
      border-radius: 12px;
      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
      width: 90%;
-     max-width: 800px;
+     max-width: 900px;
      padding: 25px 20px;
+     text-align: right;
    }
-   .level-section h2 {
+   .email-card h2 {
      color: #0077cc;
-     font-size: 28px;
-     margin-bottom: 15px;
-     text-align: center;
-   }
-   .email-card {
-     margin-bottom: 12px;
-     padding: 12px;
-     border-left: 4px solid #0077cc;
-     background: #f0f4f8;
-     border-radius: 6px;
+     font-size: 26px;
+     margin-bottom: 10px;
    }
    .email-card p {
-     margin: 5px 0;
      font-size: 18px;
-     text-align: right;
+     margin: 8px 0;
    }
    .email-card p span {
      font-weight: bold;
+   }
+   .zweck {
+     background: #e0f0ff;
+     border-left: 4px solid #0077cc;
+     padding: 10px;
+     border-radius: 6px;
+     margin-top: 10px;
    }
    /* تكبير الخط للجوال */
    @media (max-width: 600px) {
@@ -70,76 +69,79 @@
      header p {
        font-size: 24px;
      }
-     .level-section h2 {
-       font-size: 32px;
+     .email-card h2 {
+       font-size: 28px;
      }
      .email-card p {
-       font-size: 22px;
+       font-size: 20px;
      }
    }
 </style>
 </head>
 <body>
 <header>
-<h1>📧 أمثلة إيميلات ألمانية</h1>
-<p>تعلم كتابة الإيميلات لكل مستويات اللغة: A1, A2, B1, B2</p>
+<h1>📧 إيميلات مستوى A1</h1>
+<p>تعلم كتابة إيميلات متنوعة باللغة الألمانية (صديق، رسمي، شركات…)</p>
 </header>
 <main>
-<!-- مستوى A1 -->
-<div class="level-section">
-<h2>مستوى A1</h2>
-<div class="email-card"><p><span>ألماني:</span> Hallo Maria, wie geht es dir?</p><p><span>ترجمة:</span> مرحبًا ماريا، كيف حالك؟</p></div>
-<div class="email-card"><p><span>ألماني:</span> Guten Morgen, ich heiße Ahmed.</p><p><span>ترجمة:</span> صباح الخير، اسمي أحمد.</p></div>
-<div class="email-card"><p><span>ألماني:</span> Danke für deine Nachricht.</p><p><span>ترجمة:</span> شكرًا على رسالتك.</p></div>
-<div class="email-card"><p><span>ألماني:</span> Ich möchte einen Termin vereinbaren.</p><p><span>ترجمة:</span> أود تحديد موعد.</p></div>
-<div class="email-card"><p><span>ألماني:</span> Kannst du mir bitte helfen?</p><p><span>ترجمة:</span> هل يمكنك مساعدتي من فضلك؟</p></div>
-<div class="email-card"><p><span>ألماني:</span> Vielen Dank für Ihre Hilfe.</p><p><span>ترجمة:</span> شكرًا جزيلاً لمساعدتك.</p></div>
-<div class="email-card"><p><span>ألماني:</span> Ich freue mich auf Ihre Antwort.</p><p><span>ترجمة:</span> أتطلع إلى ردكم.</p></div>
-<div class="email-card"><p><span>ألماني:</span> Entschuldigung, ich habe eine Frage.</p><p><span>ترجمة:</span> عذرًا، لدي سؤال.</p></div>
-<div class="email-card"><p><span>ألماني:</span> Bitte senden Sie mir die Informationen.</p><p><span>ترجمة:</span> يرجى إرسال المعلومات لي.</p></div>
-<div class="email-card"><p><span>ألماني:</span> Ich habe Ihre E-Mail erhalten.</p><p><span>ترجمة:</span> لقد استلمت بريدكم الإلكتروني.</p></div>
-<div class="email-card"><p><span>ألماني:</span> Vielen Dank für Ihre Nachricht.</p><p><span>ترجمة:</span> شكرًا على رسالتكم.</p></div>
-<div class="email-card"><p><span>ألماني:</span> Ich möchte mich vorstellen.</p><p><span>ترجمة:</span> أود تقديم نفسي.</p></div>
-<div class="email-card"><p><span>ألماني:</span> Können wir morgen telefonieren?</p><p><span>ترجمة:</span> هل يمكننا التحدث غدًا؟</p></div>
-<div class="email-card"><p><span>ألماني:</span> Ich habe eine Frage zum Kurs.</p><p><span>ترجمة:</span> لدي سؤال حول الدورة.</p></div>
-<div class="email-card"><p><span>ألماني:</span> Danke für Ihre schnelle Antwort.</p><p><span>ترجمة:</span> شكرًا على ردكم السريع.</p></div>
-<div class="email-card"><p><span>ألماني:</span> Ich freue mich auf das Treffen.</p><p><span>ترجمة:</span> أتطلع إلى اللقاء.</p></div>
-<div class="email-card"><p><span>ألماني:</span> Können Sie mir bitte helfen?</p><p><span>ترجمة:</span> هل يمكنكم مساعدتي من فضلكم؟</p></div>
-<div class="email-card"><p><span>ألماني:</span> Ich möchte mich bedanken.</p><p><span>ترجمة:</span> أود أن أشكر.</p></div>
-<div class="email-card"><p><span>ألماني:</span> Bitte bestätigen Sie den Termin.</p><p><span>ترجمة:</span> يرجى تأكيد الموعد.</p></div>
-<div class="email-card"><p><span>ألماني:</span> Ich habe eine Frage zu Ihrer E-Mail.</p><p><span>ترجمة:</span> لدي سؤال بخصوص بريدكم الإلكتروني.</p></div>
+<!-- إيميل 1: لصديق -->
+<div class="email-card">
+<h2>إيميل 1: لصديق</h2>
+<p><span>ألماني:</span> Hallo Jakob, ich habe gehört, dass du bald deine Spanischprüfung machst. Das ist toll! Bist du nervös? Was musst du da genau machen? Hast du viel gelernt und geübt? Ich bin mir sicher, dass du es gut schaffen wirst. Versuche ruhig zu bleiben und alles Schritt für Schritt zu machen. Denk daran, dass Übung hilft. Ich wünsche dir viel Erfolg! Schreib mir danach, wie es gelaufen ist.</p>
+<p><span>ترجمة:</span> مرحبًا يا ياكوب، لقد سمعت أنك ستجري قريبًا اختبار اللغة الإسبانية. هذا رائع! هل أنت متوتر؟ ماذا يجب أن تفعل بالضبط؟ هل درست وتدربت كثيرًا؟ أنا متأكد أنك ستنجح جيدًا. حاول أن تبقى هادئًا وأن تقوم بكل شيء خطوة بخطوة. تذكر أن التدريب يساعد دائمًا. أتمنى لك الكثير من النجاح! أرسل لي بعد ذلك كيف كان الاختبار.</p>
+<div class="zweck">
+<p>سبب كتابة الإيميل:</p>
+<ul>
+<li>تهنئة صديق قبل اختبار.</li>
+<li>تشجيع وصقل الثقة بالنفس.</li>
+<li>تدريب على كتابة جمل طويلة ومهذبة.</li>
+</ul>
 </div>
-<!-- مستوى A2 -->
-<div class="level-section">
-<h2>مستوى A2</h2>
-<div class="email-card"><p><span>ألماني:</span> Vielen Dank für Ihre schnelle Antwort.</p><p><span>ترجمة:</span> شكرًا على ردكم السريع.</p></div>
-<div class="email-card"><p><span>ألماني:</span> Ich hätte gerne weitere Informationen zum Kurs.</p><p><span>ترجمة:</span> أود الحصول على مزيد من المعلومات حول الدورة.</p></div>
-<div class="email-card"><p><span>ألماني:</span> Können wir den Termin verschieben?</p><p><span>ترجمة:</span> هل يمكننا تأجيل الموعد؟</p></div>
-<div class="email-card"><p><span>ألماني:</span> Ich freue mich auf Ihre Rückmeldung.</p><p><span>ترجمة:</span> أتطلع إلى ردكم.</p></div>
-<div class="email-card"><p><span>ألماني:</span> Vielen Dank für Ihre Unterstützung.</p><p><span>ترجمة:</span> شكرًا على دعمكم.</p></div>
-<div class="email-card"><p><span>ألماني:</span> Ich habe die Unterlagen erhalten.</p><p><span>ترجمة:</span> لقد استلمت المستندات.</p></div>
-<div class="email-card"><p><span>ألماني:</span> Könnten Sie mir bitte die Datei zusenden?</p><p><span>ترجمة:</span> هل يمكنكم إرسال الملف لي من فضلكم؟</p></div>
-<div class="email-card"><p><span>ألماني:</span> Entschuldigen Sie die späte Antwort.</p><p><span>ترجمة:</span> نعتذر على الرد المتأخر.</p></div>
-<div class="email-card"><p><span>ألماني:</span> Ich möchte mich für die Einladung bedanken.</p><p><span>ترجمة:</span> أود أن أشكر على الدعوة.</p></div>
-<div class="email-card"><p><span>ألماني:</span> Können Sie mir bitte weitere Informationen geben?</p><p><span>ترجمة:</span> هل يمكنكم تزويدي بمعلومات إضافية؟</p></div>
-<!-- أضف 10 أمثلة إضافية بنفس النمط لإكمال 20 مثال -->
 </div>
-<!-- مستوى B1 -->
-<div class="level-section">
-<h2>مستوى B1</h2>
-<div class="email-card"><p><span>ألماني:</span> Ich möchte mich für die Einladung bedanken.</p><p><span>ترجمة:</span> أود أن أشكر على الدعوة.</p></div>
-<div class="email-card"><p><span>ألماني:</span> Ich hoffe, dass wir bald zusammenarbeiten können.</p><p><span>ترجمة:</span> آمل أن نتمكن من العمل معًا قريبًا.</p></div>
-<div class="email-card"><p><span>ألماني:</span> Vielen Dank für die detaillierten Informationen.</p><p><span>ترجمة:</span> شكرًا على المعلومات المفصلة.</p></div>
-<!-- أضف 17 مثال إضافي بنفس النمط لإكمال 20 مثال -->
+<!-- إيميل 2: دعوة لصديق -->
+<div class="email-card">
+<h2>إيميل 2: دعوة لصديق</h2>
+<p><span>ألماني:</span> Hallo Maria, ich hoffe, dir geht es gut. Am Samstag möchte ich dich zu meiner Geburtstagsfeier einladen. Die Feier beginnt um 17 Uhr bei mir zu Hause. Es gibt Kuchen, Getränke und Musik. Bitte sag mir Bescheid, ob du kommen kannst. Ich freue mich, dich zu sehen und einen schönen Nachmittag zu verbringen. Du kannst auch deine Freunde mitbringen, wenn du möchtest.</p>
+<p><span>ترجمة:</span> مرحبًا ماريا، أتمنى أن تكوني بخير. يوم السبت أود دعوتك لحفلة عيد ميلادي. تبدأ الحفلة الساعة 17:00 في منزلي. سيكون هناك كعك ومشروبات وموسيقى. من فضلك أخبريني إذا كنتِ تستطيعين الحضور. أنا متحمس لرؤيتك وقضاء فترة بعد ظهر جميلة معًا. يمكنك أيضًا إحضار أصدقائك إذا أحببت.</p>
+<div class="zweck">
+<p>سبب كتابة الإيميل:</p>
+<ul>
+<li>دعوة صديقة لحفل.</li>
+<li>تدريب على كتابة الدعوات بالألمانية.</li>
+<li>استخدام التحيات والختام المناسب.</li>
+<li>تطبيق جمل مهذبة ومفردات يومية.</li>
+</ul>
 </div>
-<!-- مستوى B2 -->
-<div class="level-section">
-<h2>مستوى B2</h2>
-<div class="email-card"><p><span>ألماني:</span> Ich hoffe, dass wir bald zusammenarbeiten können.</p><p><span>ترجمة:</span> آمل أن نتمكن من العمل معًا قريبًا.</p></div>
-<div class="email-card"><p><span>ألماني:</span> Vielen Dank für Ihre Unterstützung und Ihr Verständnis.</p><p><span>ترجمة:</span> شكرًا على دعمكم وتفهمكم.</p></div>
-<div class="email-card"><p><span>ألماني:</span> Ich freue mich auf eine erfolgreiche Zusammenarbeit.</p><p><span>ترجمة:</span> أتطلع إلى تعاون ناجح.</p></div>
-<!-- أضف 17 مثال إضافي بنفس النمط لإكمال 20 مثال -->
 </div>
+<!-- إيميل 3: رسالة رسمية لشركة -->
+<div class="email-card">
+<h2>إيميل 3: لشركة</h2>
+<p><span>ألماني:</span> Sehr geehrte Damen und Herren, ich interessiere mich für Ihr Sprachkursangebot. Könnten Sie mir bitte weitere Informationen senden? Ich möchte wissen, welche Kurse aktuell verfügbar sind und welche Gebühren anfallen. Vielen Dank im Voraus für Ihre Antwort. Ich freue mich auf Ihre Rückmeldung und hoffe, bald an einem Kurs teilnehmen zu können.</p>
+<p><span>ترجمة:</span> السيدات والسادة الأعزاء، أنا مهتم بعروض دورات اللغة الخاصة بكم. هل يمكنكم إرسال المزيد من المعلومات لي؟ أود أن أعرف الدورات المتاحة حاليًا وما هي الرسوم. شكرًا مقدمًا على ردكم. أتطلع إلى ردكم وآمل أن أتمكن من حضور دورة قريبًا.</p>
+<div class="zweck">
+<p>سبب كتابة الإيميل:</p>
+<ul>
+<li>طلب معلومات رسمية من شركة.</li>
+<li>تدريب على الصيغ الرسمية والتحية المناسبة.</li>
+<li>تعلم كتابة استفسارات واضحة ومهذبة.</li>
+</ul>
+</div>
+</div>
+<!-- إيميل 4: شكر لشركة -->
+<div class="email-card">
+<h2>إيميل 4: شكر لشركة</h2>
+<p><span>ألماني:</span> Sehr geehrtes Team, vielen Dank für Ihre schnelle Lieferung. Die Produkte sind in einwandfreiem Zustand angekommen und ich bin sehr zufrieden. Ihre Unterstützung und Freundlichkeit weiß ich sehr zu schätzen. Ich werde Ihr Unternehmen gerne weiterempfehlen und freue mich auf zukünftige Bestellungen.</p>
+<p><span>ترجمة:</span> الفريق المحترم، شكرًا جزيلًا على التوصيل السريع. وصلت المنتجات في حالة ممتازة وأنا راضٍ جدًا. أقدر دعمكم وودكم. سأوصي بشركتكم بسرور وأتطلع للطلبات المستقبلية.</p>
+<div class="zweck">
+<p>سبب كتابة الإيميل:</p>
+<ul>
+<li>التعبير عن الشكر لشركة بعد التوصيل.</li>
+<li>تطبيق الصيغ الرسمية والمهذبة.</li>
+<li>تعلم كيفية كتابة إيميلات قصيرة ولطيفة.</li>
+</ul>
+</div>
+</div>
+<!-- يمكنك إضافة إيميلات 5 إلى 20 بنفس النمط -->
 </main>
 </body>
 </html>
