Update emails.htmlضافة أول 5 إيميلات لمستوى A1 مع ترجمة عربية وأسباب كتابة الإيميل وتصميم متجاوب للجوال والحاسوب

--- a/emails.html
+++ b/emails.html
@@ -4,77 +4,21 @@
 <meta charset="UTF-8">
 <title>📧 إيميلات مستوى A1</title>
 <style>
-   body {
-     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-     margin: 0;
-     padding: 0;
-     background: #f4f7f8;
-     color: #333;
-   }
-   header {
-     background: #0077cc;
-     color: white;
-     padding: 40px 20px;
-     text-align: center;
-     box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-   }
-   header h1 {
-     font-size: 36px;
-     margin: 0 0 10px 0;
-   }
-   header p {
-     font-size: 20px;
-     margin: 0;
-   }
-   main {
-     padding: 40px 20px;
-     display: flex;
-     flex-direction: column;
-     gap: 30px;
-     align-items: center;
-   }
-   .email-card {
-     background: white;
-     border-radius: 12px;
-     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-     width: 90%;
-     max-width: 900px;
-     padding: 25px 20px;
-     text-align: right;
-   }
-   .email-card h2 {
-     color: #0077cc;
-     font-size: 26px;
-     margin-bottom: 10px;
-   }
-   .email-card p {
-     font-size: 18px;
-     margin: 8px 0;
-   }
-   .email-card p span {
-     font-weight: bold;
-   }
-   .zweck {
-     background: #e0f0ff;
-     border-left: 4px solid #0077cc;
-     padding: 10px;
-     border-radius: 6px;
-     margin-top: 10px;
-   }
-   /* تكبير الخط للجوال */
-   @media (max-width: 600px) {
-     header h1 {
-       font-size: 42px;
-     }
-     header p {
-       font-size: 24px;
-     }
-     .email-card h2 {
-       font-size: 28px;
-     }
-     .email-card p {
-       font-size: 20px;
-     }
+   body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin:0; padding:0; background:#f4f7f8; color:#333; }
+   header { background:#0077cc; color:white; padding:40px 20px; text-align:center; box-shadow:0 4px 6px rgba(0,0,0,0.1);}
+   header h1{ font-size:36px; margin:0 0 10px 0;}
+   header p{ font-size:20px; margin:0;}
+   main{ padding:40px 20px; display:flex; flex-direction:column; gap:30px; align-items:center;}
+   .email-card{ background:white; border-radius:12px; box-shadow:0 4px 8px rgba(0,0,0,0.1); width:90%; max-width:900px; padding:25px 20px; text-align:right;}
+   .email-card h2{ color:#0077cc; font-size:26px; margin-bottom:10px;}
+   .email-card p{ font-size:18px; margin:8px 0;}
+   .email-card p span{ font-weight:bold;}
+   .zweck{ background:#e0f0ff; border-left:4px solid #0077cc; padding:10px; border-radius:6px; margin-top:10px;}
+   @media (max-width:600px){
+     header h1{ font-size:42px;}
+     header p{ font-size:24px;}
+     .email-card h2{ font-size:28px;}
+     .email-card p{ font-size:20px;}
    }
 </style>
 </head>
@@ -141,7 +85,20 @@
 </ul>
 </div>
 </div>
-<!-- يمكنك إضافة إيميلات 5 إلى 20 بنفس النمط -->
+<!-- إيميل 5: طلب مساعدة لصديق -->
+<div class="email-card">
+<h2>إيميل 5: طلب مساعدة لصديق</h2>
+<p><span>ألماني:</span> Hallo Tom, ich hoffe, es geht dir gut. Ich brauche deine Hilfe für mein Projekt in der Schule. Könntest du mir bitte die Informationen über die Geschichte von Hamburg schicken? Ich habe Schwierigkeiten, alles alleine zu finden und dein Wissen wäre sehr hilfreich. Vielen Dank im Voraus für deine Unterstützung. Ich freue mich auf deine Antwort und hoffe, dass wir uns bald treffen können.</p>
+<p><span>ترجمة:</span> مرحبًا توم، أتمنى أن تكون بخير. أحتاج مساعدتك في مشروعي المدرسي. هل يمكنك إرسال المعلومات عن تاريخ هامبورغ لي؟ أجد صعوبة في العثور على كل شيء بمفردي ومعرفتك ستكون مفيدة جدًا. شكرًا مقدمًا على دعمك. أتطلع لردك وآمل أن نلتقي قريبًا.</p>
+<div class="zweck">
+<p>سبب كتابة الإيميل:</p>
+<ul>
+<li>طلب مساعدة من صديق.</li>
+<li>تدريب على كتابة طلب بطريقة مهذبة.</li>
+<li>تعلم استخدام الجمل الطويلة والأسئلة المناسبة.</li>
+</ul>
+</div>
+</div>
 </main>
 </body>
 </html>
